modified css & html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Marc Vargas Portfolio</title>
 </head>
 
 <body>
@@ -30,9 +30,19 @@
         </div>
     </div>
 
-    <!-- about me section -->
-    <!-- projects section -->
-    <!-- contact information section -->
+    <!-- main content section -->
+    <div class="main-content-container">
+        <div class="child"></div>
+        <div class="child-x"></div>
+        <div class="child"></div>
+        <div class="child-x"></div>
+        
+
+
+        <!-- about me section -->
+        <!-- projects section -->
+        <!-- contact information section -->  
+    </div>
 </body>
 
 </html>
