--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
 
     <!-- main content section -->
     <div class="main-content-container">
-        <div class="child"></div>
-        <div class="child-x"></div>
-        <div class="child"></div>
-        <div class="child-x"></div>
-        
+        <div class="content-container"></div>
+        <div class="content-container"></div>
+        <hr>
 
+        <div class="content-container"></div>
+        <div class="content-container"></div>
+        <div class="content-container"></div>
+        <div class="content-container"></div>
+        <hr>
+
+        <div class="content-container"></div>
+        <hr>
 
         <!-- about me section -->
         <!-- projects section -->
