adding about me

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <div>
             <ul>
                 <li>
-                    <!-- TODO: fix link -->
-                    <a href="#search-engine-optimization">About Me</a>
+                    <a href="#about-me-section">About Me</a>
                 </li>
                 <li>
                     <!-- TODO: fix link -->
@@ -32,7 +31,13 @@
 
     <!-- main content section -->
     <div class="main-content-container">
-        <div class="content-container"></div>
+        <!-- about me section -->
+        <div id="about-me-section" class="content-container">
+            <h1>About Me.</h1>
+            <br>
+            <p>Hello world!, I'm Marc Vargas, your friendly neighborhood full stack developer here. In 2023 I began my programming journey. Everyday, I wake up pumped to collaborate, design, & code. I love every aspect of bringing an idea to fruition & find each step of the way exciting. My skills currently include HTML, CSS, & Javascript.</p>
+        </div>
+        
         <div class="content-container"></div>
         <hr>
 
