added contact info

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                     <a href="#online-reputation-management">Projects</a>
                 </li>
                 <li>
-                    <!-- TODO: fix link -->
-                    <a href="#social-media-marketing">Contact Me</a>
+                    <a href="#contact-information-section">Contact Me</a>
                 </li>
             </ul>
         </div>
@@ -47,12 +46,19 @@
         <div class="content-container"></div>
         <hr>
 
-        <div class="content-container"></div>
+        <!-- contact info section -->
+        <div id="contact-information-section" class="content-container">
+            <h1>Contact Information</h1>
+            <br>
+            <ul>
+                <li>Phone Number: (210)-204-3936</li>
+                <li>Email: M_Vargas132@protonmail.com</li>
+                <li>Github: https://github.com/MarcV623</li>
+            </ul>
+        </div>
         <hr>
 
-        <!-- about me section -->
         <!-- projects section -->
-        <!-- contact information section -->  
     </div>
 </body>
 
