added/deleted photos for projects

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                     <a href="#about-me-section">About Me</a>
                 </li>
                 <li>
-                    <!-- TODO: fix link -->
-                    <a href="#online-reputation-management">Projects</a>
+                    <a href="#first-project-section">Projects</a>
                 </li>
                 <li>
                     <a href="#contact-information-section">Contact Me</a>
@@ -37,13 +36,17 @@
             <p>Hello world!, I'm Marc Vargas, your friendly neighborhood full stack developer here. In 2023 I began my programming journey. Everyday, I wake up pumped to collaborate, design, & code. I love every aspect of bringing an idea to fruition & find each step of the way exciting. My skills currently include HTML, CSS, & Javascript.</p>
         </div>
         
-        <div class="content-container"></div>
+        <!-- first project -->
+        <div id="first-project-section" class="content-container"></div>
         <hr>
 
-        <div class="content-container"></div>
-        <div class="content-container"></div>
-        <div class="content-container"></div>
-        <div class="content-container"></div>
+        <div id="second-project-section" class="content-container"></div>
+
+        <div id="third-project-section" class="content-container"></div>
+
+        <div id="fourth-project-section" class="content-container"></div>
+
+        <div id="fifth-project-section" class="content-container"></div>
         <hr>
 
         <!-- contact info section -->
