--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     <div class="main-content-container">
         <!-- about me section -->
         <div id="about-me-section" class="content-container">
-            <h1>About Me.</h1>
+            <h1>About Me</h1>
             <br>
             <p>Hello world!, I'm Marc Vargas, your friendly neighborhood full stack developer here. In 2023 I began my programming journey. Everyday, I wake up pumped to collaborate, design, & code. I love every aspect of bringing an idea to fruition & find each step of the way exciting. My skills currently include HTML, CSS, & Javascript.</p>
         </div>
+        <hr>
         
         <!-- first project -->
         <a id="first-project-section" class="content-container project-container" href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwj4mYPJw77_AhXNlmoFHd2BC3sQPAgJ">
@@ -57,6 +58,7 @@
                 <h2><span class="project-label">Online Puzzles</span></h2>
             </div>
         </a>
+        <hr>
 
         <!-- fourth project -->
         <a id="fourth-project-section" class="content-container project-container" href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwj4mYPJw77_AhXNlmoFHd2BC3sQPAgJ">
