added project links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <hr>
         
         <!-- first project -->
-        <a id="first-project-section" class="content-container project-container" href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwj4mYPJw77_AhXNlmoFHd2BC3sQPAgJ">
+        <a id="first-project-section" class="content-container project-container" href="https://marcv623.github.io/html-css-challenge/">
             <div>
                 <h2><span class="project-label">Marketing Website</span></h2>
             </div>
@@ -46,14 +46,14 @@
         <hr>
         
         <!-- second project -->
-        <a id="second-project-section" class="content-container project-container" href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwj4mYPJw77_AhXNlmoFHd2BC3sQPAgJ">
+        <a id="second-project-section" class="content-container project-container" href="https://marcv623.github.io/html-css-challenge/">
             <div>
                  <h2><span class="project-label">App Design</span></h2>
              </div>
          </a>
 
         <!-- third project -->
-        <a id="third-project-section" class="content-container project-container" href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwj4mYPJw77_AhXNlmoFHd2BC3sQPAgJ">
+        <a id="third-project-section" class="content-container project-container" href="https://marcv623.github.io/html-css-challenge/">
              <div>
                 <h2><span class="project-label">Online Puzzles</span></h2>
             </div>
@@ -61,14 +61,14 @@
         <hr>
 
         <!-- fourth project -->
-        <a id="fourth-project-section" class="content-container project-container" href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwj4mYPJw77_AhXNlmoFHd2BC3sQPAgJ">
+        <a id="fourth-project-section" class="content-container project-container" href="https://marcv623.github.io/html-css-challenge/">
              <div>
                 <h2><span class="project-label">Calculator</span></h2>
             </div>
         </a>
 
         <!-- fifth project -->
-        <a id="fifth-project-section" class="content-container project-container" href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwj4mYPJw77_AhXNlmoFHd2BC3sQPAgJ">
+        <a id="fifth-project-section" class="content-container project-container" href="https://marcv623.github.io/html-css-challenge/">
             <div>
                 <h2><span class="project-label">Security Project</span></h2>
             </div>
